--- a/Settings.ini
+++ b/Settings.ini
@@ -23,9 +23,10 @@ StaminaRegenMult=0.2
 
 [AI]
 ;; lower is harder
+;; This multiples the AI update timers. If you 
 AIDifficultyMult=1.0
 ;; Be careful with this. too high values may cause AI to quickly become combat gods or bumbling idiots within a few exchanges
-AIGrowthFactor=0.05
+AIGrowthFactor=0.02
 ;; These are the difference in level to the player that assigns AI difficulty to an NPC
 ;; These must be ascending otherwise all enemies will be assigned to be very easy
 VeryEasyLvl=-8
@@ -34,6 +35,23 @@ NormalLvl=3
 HardLvl=5
 VeryHardLvl=7
 LegendaryLvl=11
+;; These are update timers. AI processes things on an interval based on this value. This is in seconds, so 0.16 is 160 ms.
+;; These should not be below 120 ms. It will break if they are.
+;; You can spend a lot of time playing with these values and not playing the game. The granularity is probably too great
+;; for most peoples use cases. It's easier to just adjust AIDifficultyMult
+LegendaryUpdateTimer=0.16
+VeryHardUpdateTimer=0.2
+HardUpdateTimer=0.22
+NormalUpdateTimer=0.24
+EasyUpdateTimer=0.24
+VeryEasyUpdateTimer=0.3
+;; These are action timers. This represents an AI's reaction time. 
+LegendaryActionTimer=0.14
+VeryHardActionTimer=0.18
+HardActionTimer=0.2
+NormalActionTimer=0.2
+EasyActionTimer=0.24
+VeryEasyActionTimer=0.28
 
 [Settings]
 ActiveDistance=4000.0
@@ -56,5 +74,5 @@ RebalanceWeaponSpeed=true
 WarhammerSpeed=0.75
 BattleaxeSpeed=0.78
 GreatSwordSpeed=0.8
-SwordSpeed=0.9
-AxeSpeed=0.8
+SwordSpeed=1.1
+AxeSpeed=0.9
