--- a/Settings.ini
+++ b/Settings.ini
@@ -20,10 +20,12 @@ StaggerResetTimer=1.5
 AttackTimeoutTime=1.0
 AttacksCostStamina=true
 StaminaRegenMult=0.2
+;; this is a stagger reset timer to prevent non-NPCs from staggering too much since they cant block
+NonNPCStaggerMult=3.0
 
 [AI]
 ;; lower is harder
-;; This multiples the AI update timers. If you 
+;; This multiples the AI update timers.
 AIDifficultyMult=1.0
 ;; Be careful with this. too high values may cause AI to quickly become combat gods or bumbling idiots within a few exchanges
 AIGrowthFactor=0.02
@@ -54,7 +56,7 @@ EasyActionTimer=0.24
 VeryEasyActionTimer=0.28
 
 [Settings]
-ActiveDistance=4000.0
+ActiveDistance=2000.0
 
 [UI]
 Size=300.f
