--- a/Settings.ini
+++ b/Settings.ini
@@ -9,23 +9,26 @@ KeyCodeTL=2
 KeyCodeTR=3
 KeyCodeBL=4
 KeyCodeBR=5
+KeyCodeFeint=16
 
 [Difficulty]
-MeleeDamageMult=2.0
+MeleeDamageMult=1.5
 UnblockableDamageMult=2.0
-ProjectileDamageMult=0.25
+ProjectileDamageMult=0.5
 ComboResetTimer=3.0
-ChamberWindowTime=2.0
+ChamberWindowTime=0.5
 StaggerResetTimer=1.5
 AttackTimeoutTime=1.0
 AttacksCostStamina=true
-StaminaRegenMult=0.2
+StaminaRegenMult=0.3
 ;; this is a stagger reset timer to prevent non-NPCs from staggering too much since they cant block
 NonNPCStaggerMult=3.0
+;; Percentage, so this needs to be < 1
+StaminaCost=0.14
 
 [AI]
 ;; lower is harder
-;; This multiples the AI update timers.
+;; This multiples the AI update timers. If you 
 AIDifficultyMult=1.0
 ;; Be careful with this. too high values may cause AI to quickly become combat gods or bumbling idiots within a few exchanges
 AIGrowthFactor=0.02
@@ -36,29 +39,29 @@ EasyLvl=-3
 NormalLvl=3
 HardLvl=5
 VeryHardLvl=7
-LegendaryLvl=11
+LegendaryLvl=16
 ;; These are update timers. AI processes things on an interval based on this value. This is in seconds, so 0.16 is 160 ms.
-;; These should not be below 120 ms. It will break if they are.
 ;; You can spend a lot of time playing with these values and not playing the game. The granularity is probably too great
 ;; for most peoples use cases. It's easier to just adjust AIDifficultyMult
-LegendaryUpdateTimer=0.16
-VeryHardUpdateTimer=0.2
-HardUpdateTimer=0.22
-NormalUpdateTimer=0.24
-EasyUpdateTimer=0.24
-VeryEasyUpdateTimer=0.3
+LegendaryUpdateTimer=0.2
+VeryHardUpdateTimer=0.22
+HardUpdateTimer=0.24
+NormalUpdateTimer=0.28
+EasyUpdateTimer=0.32
+VeryEasyUpdateTimer=0.4
 ;; These are action timers. This represents an AI's reaction time. 
 LegendaryActionTimer=0.14
-VeryHardActionTimer=0.18
+VeryHardActionTimer=0.16
 HardActionTimer=0.2
-NormalActionTimer=0.2
+NormalActionTimer=0.22
 EasyActionTimer=0.24
-VeryEasyActionTimer=0.28
+VeryEasyActionTimer=0.32
 
 [Settings]
 ActiveDistance=2000.0
 
 [UI]
+ShowUI=true
 Size=300.f
 Length=13.f
 Thickness=7.f
@@ -73,8 +76,10 @@ WeaponSpeedMult=0.9
 ;; responsible for normalizing weapon speeds across weapon types and adjusting their damage, actually rebalancing the weapons
 ;; weapons that are sped up have their damage reduced, and weapons that are slowed down have their damage increased
 RebalanceWeaponSpeed=true
-WarhammerSpeed=0.75
-BattleaxeSpeed=0.78
-GreatSwordSpeed=0.8
-SwordSpeed=1.1
-AxeSpeed=0.9
+WarhammerSpeed=0.78
+BattleaxeSpeed=0.8
+GreatSwordSpeed=0.82
+SwordSpeed=1.15
+AxeSpeed=1.1
+;; For more ranged balancing
+BowSpeed=0.5
