--- a/Settings.ini
+++ b/Settings.ini
@@ -22,9 +22,10 @@ AttackTimeoutTime=1.0
 AttacksCostStamina=true
 StaminaRegenMult=0.3
 ;; this is a stagger reset timer to prevent non-NPCs from staggering too much since they cant block
-NonNPCStaggerMult=3.0
+NonNPCStaggerMult=6.0
 ;; Percentage, so this needs to be < 1
-StaminaCost=0.14
+StaminaCost=0.1
+WeaponWeightStaminaMult=0.33
 
 [AI]
 ;; lower is harder
@@ -43,19 +44,19 @@ LegendaryLvl=16
 ;; These are update timers. AI processes things on an interval based on this value. This is in seconds, so 0.16 is 160 ms.
 ;; You can spend a lot of time playing with these values and not playing the game. The granularity is probably too great
 ;; for most peoples use cases. It's easier to just adjust AIDifficultyMult
-LegendaryUpdateTimer=0.2
-VeryHardUpdateTimer=0.22
-HardUpdateTimer=0.24
-NormalUpdateTimer=0.28
-EasyUpdateTimer=0.32
-VeryEasyUpdateTimer=0.4
+LegendaryUpdateTimer=0.18
+VeryHardUpdateTimer=0.2
+HardUpdateTimer=0.2
+NormalUpdateTimer=0.22
+EasyUpdateTimer=0.24
+VeryEasyUpdateTimer=0.28
 ;; These are action timers. This represents an AI's reaction time. 
 LegendaryActionTimer=0.14
 VeryHardActionTimer=0.16
 HardActionTimer=0.2
 NormalActionTimer=0.22
 EasyActionTimer=0.24
-VeryEasyActionTimer=0.32
+VeryEasyActionTimer=0.28
 
 [Settings]
 ActiveDistance=2000.0
@@ -76,10 +77,10 @@ WeaponSpeedMult=0.9
 ;; responsible for normalizing weapon speeds across weapon types and adjusting their damage, actually rebalancing the weapons
 ;; weapons that are sped up have their damage reduced, and weapons that are slowed down have their damage increased
 RebalanceWeaponSpeed=true
-WarhammerSpeed=0.78
-BattleaxeSpeed=0.8
-GreatSwordSpeed=0.82
-SwordSpeed=1.15
+WarhammerSpeed=0.77
+BattleaxeSpeed=0.78
+GreatSwordSpeed=0.8
+SwordSpeed=1.18
 AxeSpeed=1.1
 ;; For more ranged balancing
 BowSpeed=0.5
